@startuml Pricing Service with Multi-Currency

title Pricing Service - Region-Based Multi-Currency Design

' Styling
skinparam class {
    BackgroundColor<<Aggregate>> LightBlue
    BackgroundColor<<Entity>> LightYellow
    BackgroundColor<<ValueObject>> LightGreen
    BorderColor Black
}

' ============================================
' PRICING AGGREGATE
' ============================================

class Price <<Aggregate>> {
    **Aggregate Root**
    --
    + id: Long <<PK>>
    + productId: Long <<FK>>
    + variantId: Long <<FK>> (nullable)
    + baseCurrency: String (USD)
    + basePrice: BigDecimal
    + priceType: PriceType
    + effectiveFrom: Timestamp
    + effectiveTo: Timestamp
    + isActive: Boolean
    + createdAt: Timestamp
    + updatedAt: Timestamp
    --
    + calculatePrice(region, currency)
    + applyRules(rules)
    + convertCurrency(targetCurrency)
}

enum PriceType {
    STANDARD
    SALE
    CLEARANCE
    PROMOTIONAL
    DYNAMIC
}

class RegionalPrice <<Entity>> {
    + id: Long <<PK>>
    + priceId: Long <<FK>>
    + regionId: Long <<FK>>
    + currency: String (ISO 4217)
    + price: BigDecimal
    + taxRate: BigDecimal
    + includesTax: Boolean
    + effectiveFrom: Timestamp
    + effectiveTo: Timestamp
    + isActive: Boolean
    --
    + getPriceWithTax()
    + getPriceWithoutTax()
}

class PriceRule <<Entity>> {
    + id: Long <<PK>>
    + priceId: Long <<FK>>
    + ruleType: PriceRuleType
    + ruleCondition: JSON
    + adjustmentType: AdjustmentType
    + adjustmentValue: BigDecimal
    + priority: Integer
    + validFrom: Timestamp
    + validUntil: Timestamp
    + isActive: Boolean
    --
    + evaluate(context)
    + apply(basePrice)
}

enum PriceRuleType {
    BULK_DISCOUNT
    SEASONAL
    TIME_BASED
    CUSTOMER_SEGMENT
    LOCATION_BASED
    DYNAMIC_PRICING
}

enum AdjustmentType {
    PERCENTAGE_OFF
    FIXED_AMOUNT_OFF
    FIXED_PRICE
    PERCENTAGE_MARKUP
}

class PriceHistory <<Entity>> {
    + id: Long <<PK>>
    + priceId: Long <<FK>>
    + oldPrice: BigDecimal
    + newPrice: BigDecimal
    + currency: String
    + changedBy: Long
    + changeReason: String
    + changedAt: Timestamp
}

' ============================================
' REGION & CURRENCY
' ============================================

class Region <<Aggregate>> {
    + id: Long <<PK>>
    + code: String <<Unique>> (US, EU, IN)
    + name: String
    + defaultCurrency: String
    + supportedCurrencies: List<String>
    + taxRate: BigDecimal
    + isActive: Boolean
    --
    + getSupportedCurrencies()
    + getDefaultCurrency()
}

class Currency <<Entity>> {
    + id: Long <<PK>>
    + code: String <<Unique>> (USD, EUR, INR)
    + name: String
    + symbol: String ($, €, ₹)
    + decimalPlaces: Integer
    + isActive: Boolean
}

class ExchangeRate <<Entity>> {
    + id: Long <<PK>>
    + fromCurrency: String <<FK>>
    + toCurrency: String <<FK>>
    + rate: BigDecimal
    + effectiveDate: Date
    + source: String (API provider)
    + updatedAt: Timestamp
    --
    + convert(amount)
    + isExpired()
}

' ============================================
' TAX CONFIGURATION
' ============================================

class TaxRule <<Entity>> {
    + id: Long <<PK>>
    + regionId: Long <<FK>>
    + productCategoryId: Long <<FK>>
    + taxType: TaxType
    + taxRate: BigDecimal
    + isInclusive: Boolean
    + effectiveFrom: Timestamp
    + effectiveTo: Timestamp
    + isActive: Boolean
    --
    + calculateTax(price)
}

enum TaxType {
    VAT
    GST
    SALES_TAX
    IMPORT_DUTY
    NONE
}

' ============================================
' PRICING CONTEXT (Value Object)
' ============================================

class PricingContext <<ValueObject>> {
    + productId: Long
    + variantId: Long
    + quantity: Integer
    + customerId: Long
    + regionId: Long
    + currency: String
    + customerSegment: String
    + timestamp: Timestamp
    --
    + getApplicableRules()
}

class PriceCalculationResult <<ValueObject>> {
    + basePrice: BigDecimal
    + currency: String
    + appliedRules: List<AppliedRule>
    + discounts: List<Discount>
    + subtotal: BigDecimal
    + tax: BigDecimal
    + total: BigDecimal
    + priceBreakdown: JSON
    --
    + getTotalSavings()
    + getEffectivePrice()
}

class AppliedRule <<ValueObject>> {
    + ruleId: Long
    + ruleName: String
    + ruleType: PriceRuleType
    + adjustment: BigDecimal
    + description: String
}

class Discount <<ValueObject>> {
    + type: String
    + amount: BigDecimal
    + percentage: BigDecimal
    + description: String
}

' ============================================
' PRICING SERVICE
' ============================================

class PricingService <<Service>> {
    --
    + calculatePrice(context): PriceCalculationResult
    + getRegionalPrice(productId, region): RegionalPrice
    + convertCurrency(amount, from, to): BigDecimal
    + applyPriceRules(basePrice, rules): BigDecimal
    + updateExchangeRates(): void
    + getPriceHistory(productId): List<PriceHistory>
}

' ============================================
' RELATIONSHIPS
' ============================================

' Price Core
Price "1" *-- "0..*" RegionalPrice : has regional prices
Price "1" *-- "0..*" PriceRule : has rules
Price "1" *-- "0..*" PriceHistory : tracks changes
Price "1" -- "1" PriceType : has type

' Regional Pricing
RegionalPrice "*" -- "1" Region : for region
RegionalPrice "*" -- "1" Currency : in currency

' Region & Currency
Region "1" -- "1" Currency : default currency
Region "1" -- "0..*" Currency : supports currencies
Region "1" -- "0..*" TaxRule : has tax rules

' Exchange Rates
Currency "1" -- "0..*" ExchangeRate : from currency
Currency "1" -- "0..*" ExchangeRate : to currency

' Tax
TaxRule "*" -- "1" Region : applies to region
TaxRule "1" -- "1" TaxType : has type

' Service Dependencies
PricingService ..> Price : manages
PricingService ..> RegionalPrice : calculates
PricingService ..> ExchangeRate : uses
PricingService ..> PriceRule : applies
PricingService ..> PricingContext : receives
PricingService ..> PriceCalculationResult : returns

' Value Objects
PricingContext ..> PriceCalculationResult : produces
PriceCalculationResult *-- "0..*" AppliedRule : contains
PriceCalculationResult *-- "0..*" Discount : contains

' Notes
note right of Price
  **Base Price in USD**
  - All products have base price in USD
  - Regional prices calculated/stored
  - Supports multiple price types
end note

note right of RegionalPrice
  **Region-Specific Pricing**
  - Price in local currency
  - Includes/excludes tax based on region
  - Can override base price
end note

note right of ExchangeRate
  **Real-time Exchange Rates**
  - Updated from external API
  - Cached for performance
  - Fallback to last known rate
end note

note right of PricingService
  **Pricing Calculation Flow**
  1. Get base price (USD)
  2. Check regional override
  3. Convert to target currency
  4. Apply price rules
  5. Calculate tax
  6. Return final price
end note

@enduml
